// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField> Render should render defaults 1`] = `
<div
  class="lumx-text-field lumx-text-field--has-input lumx-text-field--theme-light"
>
  <div
    class="lumx-text-field__wrapper"
  >
    <div
      class="lumx-text-field__input-wrapper"
    >
      <input
        class="lumx-text-field__input-native lumx-text-field__input-native--text"
        id="fixedId"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TextField> Render should render textarea 1`] = `
<div
  class="lumx-text-field lumx-text-field--has-textarea lumx-text-field--theme-light"
>
  <div
    class="lumx-text-field__wrapper"
  >
    <div
      class="lumx-text-field__input-wrapper"
    >
      <textarea
        class="lumx-text-field__input-native lumx-text-field__input-native--textarea"
        id="fixedId"
        rows="2"
      />
    </div>
  </div>
</div>
`;
